# Questopia-Bundle

./: .gitignore  README.md  build.gradle.kts  settings.gradle  settings.gradle.kts
app/: .gitignore  build.gradle  build.gradle.kts
app/libalpha/src/main/cpp/qsp/: codetools.c  codetools.h  game.h  locations.c  locations.h  mathops.h  menu.h  regexp.h  towupper.c  variables.c
app/libalpha/src/main/cpp/qsp/bindings/: bindings_config.h
app/libalpha/src/main/cpp/qsp/bindings/default/: default_callbacks.c  qsp_default.h
app/libalpha/src/test/java/org/qp/android/questopiabundle/libalpha/: ExampleUnitTest.java
app/libbravo/: build.gradle
app/libbravo/src/main/jni/: CMakeLists.txt
app/libbravo/src/main/jni/onig/: CMakeLists.txt
app/libbravo/src/main/jni/qsp-5.7/: CMakeLists.txt  androidqpwrapper.c
app/libbravo/src/main/jni/qsp-5.7/src/: callbacks.h  coding.c  declarations.h  mathops.c
app/libbravo/src/main/jni/qsp-5.7/src/bindings/: qsp.h
app/libbravo/src/main/jni/qsp-5.7/src/bindings/android/: android.h  android_callbacks.c  android_coding.c  android_control.c
app/src/androidTest/java/org/qp/android/questopiabundle/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/aidl/org/qp/android/questopiabundle/: AsyncCallbacks.aidl  IQuestopiaBundle.aidl  LibDialogRetValue.aidl  LibException.aidl  LibResult.aidl  LibReturnValue.aidl
app/src/main/java/org/qp/android/questopiabundle/: AudioPlayer.java  GameInterface.java  GameInterface.kt  HostApplication.java  HtmlProcessor.java  LibDialogRetValue.kt  LibException.java  LibException.kt  LibResult.java  LibResult.kt  LibReturnValue.kt  QuestopiaBundle.java  QuestopiaBundle.kt
app/src/main/java/org/qp/android/questopiabundle/dto/: LibActionData.java  LibErrorData.java  LibGameState.kt  LibGenItem.kt  LibIConfig.kt  LibListItem.java  LibListItem.kt  LibMenuItem.java  LibMenuItem.kt  LibObjectData.java  LibVarValResp.java
app/src/main/java/org/qp/android/questopiabundle/dto/lib/: LibActionData.java  LibErrorData.java  LibListItem.java  LibMenuItem.java  LibObjectData.java  LibVarValResp.java
app/src/main/java/org/qp/android/questopiabundle/lib/: LibCallbacks.java  LibGameRequest.kt  LibGameState.java  LibGameState.kt  LibICallbacks.java  LibIConfig.java  LibIConfig.kt  LibIProxy.java  LibIProxy.kt  LibNDKProxyImpl.java  LibNativeMethods.java  LibProxyImpl.java  LibRefIRequest.kt  LibTypeDialog.kt  LibTypeWindow.java  LibTypeWindow.kt  LibWindowType.java
app/src/main/java/org/qp/android/questopiabundle/lib/impl/: LibAlphaProxyImpl.java  (+5 more)
app/src/main/java/org/qp/android/questopiabundle/utils/: FileUtil.java  FileUtil.kt  HtmlUtil.java  HtmlUtil.kt  PathUtil.java  PathUtil.kt  StreamUtil.kt  StringUtil.java  StringUtil.kt  ThreadUtil.java  ThreadUtil.kt
app/src/main/jni/: CMakeLists.txt
app/src/main/jni/onig/: CMakeLists.txt
app/src/main/jni/qsp/: callbacks.h  common.h  declarations.h  errors.h  game.c  menu.c  playlist.c  statements.c  text.h  time.h  variant.h
app/src/main/jni/qsp-5.7/: CMakeLists.txt  androidqpwrapper.c
app/src/main/jni/qsp-5.7/src/: game.c
app/src/main/jni/qsp-5.7/src/bindings/: bindings_config.h
app/src/main/jni/qsp-5.7/src/bindings/android/: android_callbacks.c  android_control.c
app/src/main/jni/qsp/bindings/default/: default_control.c
app/src/main/res/values/: strings.xml
app/src/test/java/org/qp/android/questopiabundle/: ExampleUnitTest.java
gradle/: libs.versions.toml
libalpha/: build.gradle  build.gradle.kts
libalpha/src/main/cpp/: CMakeLists.txt
libalpha/src/main/cpp/qsp/: actions.c  actions.h  callbacks.c  callbacks.h  codetools.c  codetools.h  coding.c  coding.h  common.c  common.h  declarations.h  errors.c  errors.h  game.c  game.h  locations.c  locations.h  mathops.c  mathops.h  menu.c  menu.h  objects.c  objects.h  playlist.c  playlist.h  regexp.c  regexp.h  statements.c  statements.h  text.c  text.h  time.c  time.h  towlower.c  variables.c  variables.h  variant.c  variant.h
libalpha/src/main/cpp/qsp/bindings/: bindings_config.h
libalpha/src/main/cpp/qsp/bindings/default/: default_callbacks.c  default_control.c  qsp_default.h
libalpha/src/test/java/org/qp/android/questopiabundle/libalpha/: ExampleUnitTest.java
libbravo/: build.gradle  build.gradle.kts
libbravo/src/androidTest/java/org/qp/android/questopiabundle/libbravo/: ExampleInstrumentedTest.java
libbravo/src/main/java/org/libndkqsp/jni/: NDKLib.java  NDKLib.kt
libbravo/src/main/java/org/qp/android/questopiabundle/libbravo/: NDKLib.java
libbravo/src/main/jni/: CMakeLists.txt  qsp_config.h.cmakein
libbravo/src/main/jni/src/: codetools.c  coding.c  coding.h  common.c  declarations.h  game.c  game.h  locations.c  mathops.c  objects.c  playlist.c  statements.c  text.c  text.h  variables.c
libbravo/src/main/jni/src/bindings/: bindings_config.h  qsp.h
libbravo/src/main/jni/src/bindings/android/: android_callbacks.c  android_coding.c  android_control.c  org_libndkqsp_jni_NDKLib.h  org_qp_android_questopiabundle_libbravo_NDKLib.h  qsp_android.h
libbravo/src/main/jni/src/bindings/default/: default_callbacks.c  default_control.c  qsp_default.h
libbravo/src/test/java/org/qp/android/questopiabundle/libbravo/: ExampleUnitTest.java
libcharlie/: build.gradle  build.gradle.kts
libcharlie/src/androidTest/java/org/qp/android/questopiabundle/libcharlie/: ExampleInstrumentedTest.java
libcharlie/src/main/cpp/: CMakeLists.txt  qsp_config.h.cmakein
libcharlie/src/main/cpp/src/: coding.c  coding.h  common.c  common.h  declarations.h  game.c  game.h  locations.c  mathops.c  objects.c  playlist.c  statements.c  text.c  variables.c
libcharlie/src/main/cpp/src/bindings/: bindings_config.h  qsp.h
libcharlie/src/main/cpp/src/bindings/android/: android_callbacks.c  android_coding.c  android_control.c  org_libsnxqsp_jni_SNXLib.h  qsp_android.h
libcharlie/src/main/cpp/src/bindings/default/: qsp_default.h
libcharlie/src/main/java/org/libsnxqsp/jni/: SNXLib.java
libcharlie/src/test/java/org/qp/android/questopiabundle/libcharlie/: ExampleUnitTest.java
(+1 files in other folders)
